gcc/testsuite/gfortran.dg/unlimited_polymorphic_10.f90
! { dg-do compile }
!
! PR fortran/58658
!
! Contributed by Vladimír Fuka
!
subroutine sub(a)
  class(*),allocatable :: a
  a => null() ! { dg-error "Non-POINTER in pointer association context \\(pointer assignment\\)" }
end subroutine
